--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,15 @@
       <div id="user-menu" class="hidden">
         <img id="user-avatar" src="" alt="프로필">
         <span id="user-name"></span>
+        <div id="trees-per-page-wrapper">
+          <label for="trees-per-page-header">🌲</label>
+          <select id="trees-per-page-header">
+            <option value="1">1개</option>
+            <option value="2">2개</option>
+            <option value="3">3개</option>
+            <option value="4">4개</option>
+          </select>
+        </div>
         <button id="settings-btn">⚙️</button>
         <button id="logout-btn">로그아웃</button>
       </div>
@@ -104,15 +113,7 @@
           <label for="land-color">땅 색상:</label>
           <input type="color" id="land-color" value="#8B4513">
         </div>
-        <div class="form-group">
-          <label for="trees-per-page">한번에 표시할 나무 개수:</label>
-          <select id="trees-per-page">
-            <option value="1">1개</option>
-            <option value="2">2개</option>
-            <option value="3">3개</option>
-            <option value="4">4개</option>
-          </select>
-        </div>
+        
         <div class="modal-buttons">
           <button id="save-settings-btn">저장</button>
           <button id="cancel-settings-btn" class="secondary">취소</button>
