--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,20 @@
     
     <!-- 상단 바 -->
     <header id="header">
-      <!-- 좌측: 링크 복사, 토지 색, 하늘 색 -->
-      <div id="header-left" class="hidden">
-        <button id="copy-link-btn">🔗 링크 복사</button>
-        <div id="header-colors">
+      <div id="header-content">
+        <!-- 토지 소유자 이름 -->
+        <div id="land-owner-display" class="hidden">
+          <span id="land-owner-name"></span>님의 토지입니다.
+        </div>
+        <!-- 나무 개수 -->
+        <div id="tree-count-display" class="hidden">
+          <span id="tree-count-icon">🌳</span>
+          <span id="tree-count-number">0</span>그루
+        </div>
+        <!-- 링크 복사 -->
+        <button id="copy-link-btn" class="hidden">🔗 링크 복사</button>
+        <!-- 토지 색, 하늘 색 -->
+        <div id="header-colors" class="hidden">
           <div class="header-color-picker">
             <label for="header-land-color">🌍</label>
             <input type="color" id="header-land-color" value="#8B4513" title="토지 색상">
@@ -27,22 +37,8 @@
             <input type="color" id="header-sky-color" value="#87CEEB" title="하늘 색상">
           </div>
         </div>
-      </div>
-
-      <!-- 중앙: 토지 소유자 이름, 나무 개수 -->
-      <div id="header-center">
-        <div id="land-owner-display" class="hidden">
-          <span id="land-owner-name"></span>님의 토지입니다.
-        </div>
-        <div id="tree-count-display" class="hidden">
-          <span id="tree-count-icon">🌳</span>
-          <span id="tree-count-number">0</span>그루
-        </div>
-      </div>
-
-      <!-- 우측: 나무 표기 개수, 계정, 설정 -->
-      <div id="header-right" class="hidden">
-        <div id="trees-per-page-wrapper">
+        <!-- 나무 표기 개수 -->
+        <div id="trees-per-page-wrapper" class="hidden">
           <label for="trees-per-page-header">🌲</label>
           <select id="trees-per-page-header">
             <option value="1">1개</option>
@@ -51,11 +47,13 @@
             <option value="4">4개</option>
           </select>
         </div>
-        <div id="user-account">
+        <!-- 계정 -->
+        <div id="user-account" class="hidden">
           <img id="user-avatar" src="" alt="프로필">
           <span id="user-name"></span>
         </div>
-        <button id="settings-btn">⚙️</button>
+        <!-- 설정 -->
+        <button id="settings-btn" class="hidden">⚙️</button>
       </div>
     </header>
 
