--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,34 @@
     
     <!-- 상단 바 -->
     <header id="header">
-      <div id="header-content">
-        <!-- 토지 소유자 이름 -->
+      <!-- 좌측: 나무 표기 개수, 계정, 설정 -->
+      <div id="header-left">
+        <div id="trees-per-page-wrapper" class="hidden">
+          <label for="trees-per-page-header">🌲</label>
+          <select id="trees-per-page-header">
+            <option value="1">1개</option>
+            <option value="2">2개</option>
+            <option value="3">3개</option>
+            <option value="4">4개</option>
+          </select>
+        </div>
+        <div id="user-account" class="hidden">
+          <img id="user-avatar" src="" alt="프로필">
+          <span id="user-name"></span>
+        </div>
+        <button id="settings-btn" class="hidden">⚙️</button>
+      </div>
+
+      <!-- 중앙: 토지 소유자 이름, 나무 개수, 링크 복사, 색상 -->
+      <div id="header-center">
         <div id="land-owner-display" class="hidden">
           <span id="land-owner-name"></span>님의 토지입니다.
         </div>
-        <!-- 나무 개수 -->
         <div id="tree-count-display" class="hidden">
           <span id="tree-count-icon">🌳</span>
           <span id="tree-count-number">0</span>그루
         </div>
-        <!-- 링크 복사 -->
         <button id="copy-link-btn" class="hidden">🔗 링크 복사</button>
-        <!-- 토지 색, 하늘 색 -->
         <div id="header-colors" class="hidden">
           <div class="header-color-picker">
             <label for="header-land-color">🌍</label>
@@ -37,24 +52,10 @@
             <input type="color" id="header-sky-color" value="#87CEEB" title="하늘 색상">
           </div>
         </div>
-        <!-- 나무 표기 개수 -->
-        <div id="trees-per-page-wrapper" class="hidden">
-          <label for="trees-per-page-header">🌲</label>
-          <select id="trees-per-page-header">
-            <option value="1">1개</option>
-            <option value="2">2개</option>
-            <option value="3">3개</option>
-            <option value="4">4개</option>
-          </select>
-        </div>
-        <!-- 계정 -->
-        <div id="user-account" class="hidden">
-          <img id="user-avatar" src="" alt="프로필">
-          <span id="user-name"></span>
-        </div>
-        <!-- 설정 -->
-        <button id="settings-btn" class="hidden">⚙️</button>
       </div>
+
+      <!-- 우측: 비워둘 (균형용) -->
+      <div id="header-right"></div>
     </header>
 
     <!-- 메인 컨텐츠 영역 -->
