--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
           <span id="land-owner-name"></span>님의 토지입니다.
         </div>
         <div id="tree-count-display" class="hidden">
-          <span id="tree-count-icon">총</span>
+          <span id="tree-count-icon">🌳총</span>
           <span id="tree-count-number">0</span>그루
         </div>
         <button id="copy-link-btn" class="hidden">🔗 링크 복사</button>
@@ -81,7 +81,7 @@
 
     <!-- 나무 심기 화면 (다른 사람 토지 방문 시) -->
     <div id="plant-tree-screen" class="hidden">
-      <button id="plant-tree-btn" class="big-btn">나무 심어주기</button>
+      <button id="plant-tree-btn" class="big-btn">🌳 나무 심어주기</button>
     </div>
 
     <!-- 나무 심기 모달 -->
