--- a/public/index.html
+++ b/public/index.html
@@ -23,17 +23,17 @@
           <span id="land-owner-name"></span>님의 토지입니다.
         </div>
         <div id="tree-count-display" class="hidden">
-          <span id="tree-count-icon">🌳총</span>
+          <span id="tree-count-icon">🌳 총</span>
           <span id="tree-count-number">0</span>그루
         </div>
-        <button id="copy-link-btn" class="hidden">🔗 링크 복사</button>
+        <button id="copy-link-btn" class="hidden">링크 복사</button>
         <div id="header-colors" class="hidden">
           <div class="header-color-picker">
-            <label for="header-land-color">🌍</label>
+            <label for="header-land-color">땅:</label>
             <input type="color" id="header-land-color" value="#8B4513" title="토지 색상">
           </div>
           <div class="header-color-picker">
-            <label for="header-sky-color">🌤️</label>
+            <label for="header-sky-color">하늘:</label>
             <input type="color" id="header-sky-color" value="#87CEEB" title="하늘 색상">
           </div>
         </div>
